字典类型插件 json处理

--- a/src/main/webapp/pages/credit/order/order_list.html
+++ b/src/main/webapp/pages/credit/order/order_list.html
@@ -1,3 +1,5 @@
+<% var folderType = tempDict.getSysDictDetailByType('dataEntryType'); %>
+<% var sandbar = tempDict.getSysDictDetailByType('sandbar'); %>
 <% 
 	var headContent = {
 	include("/pages/template/head.html"){}
@@ -49,6 +51,15 @@ var bodyContent = {
 			<div class="form-group">
 					<input class="form-control" type="text" name="customName" value="${customName!''}" 
 						placeholder="请输入名称" required='required' />
+			</div>
+			<div class="form-group">
+			   <label  class="control-label">类型</label>
+			   <select name="" class="form-control" style="width: 200px;">
+						<option value="">请选择</option>
+						 <% for(item in sandbar){ %>
+						 <option value="${item.detail_code}">${item.detail_name}</option>
+						  <% } %>
+				</select> 
 			</div>
 			
 			<button type="button" class="btn btn-default" onclick="oper.list();" name="search">
