--- a/src/main/webapp/pages/admin/ordermanager/order_list.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_list.html
@@ -69,10 +69,13 @@ var bodyContent = {
 	<div class="tableSearch">
 		<%  //查询列表 %>
 		<div class="form-group">
-			<input class="form-control" type="text" name="attr.custom_id" value="${attr.custom_id!''}"
-				   placeholder="请输入客户编号" required='required' />
+			<input class="form-control" type="text" name="attr.id" value="${attr.id!''}"
+				   placeholder="请输入订单编号" required='required' />
 		</div>
-	
+		<div class="form-group">
+			<input class="form-control" type="text" name="attr.custom_id" value="${attr.custom_id!''}"
+				   placeholder="请输入客户代码" required='required' />
+		</div>
 
 
 		<button type="button" class="btn btn-default" onclick="oper.list();" name="search">
@@ -92,9 +95,12 @@ var bodyContent = {
 		<tr>
 			<th>序号</th>
 			<%  // 列表头部 %>
-			<th name="departid" class="sorting">id</th>
-			<th name="username" class="sorting">custom_id</th>
-			<th name="realname" class="sorting">del_flag</th>
+			<th name="id" class="sorting">订单号</th>
+			<th name="id" class="sorting">订单日期</th>
+			<th name="custom_id" class="sorting">客户代码</th>
+			<th name="status" class="sorting">处理状态</th>
+			<th name="country" class="sorting">国家</th>
+			<th name="userName" class="sorting">报告员</th>
 			<th>操作</th>
 		</tr>
 		</thead>
@@ -104,8 +110,11 @@ var bodyContent = {
 			<td>${itemLP.index }</td>
 			<%  // 列表内容 %>
 			<td>${item.id}</td>
+			<td>${item.receiver_date,dateFormat="yyyy-MM-dd"}</td>
 			<td>${item.custom_id}</td>
-			<td>${item.del_flag}</td>
+			<td>${item.status}</td>
+			<td>${item.country}</td>
+			<td>${item.userName}</td>
 
 			<td>
 				<a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.view(${item.id});">查看</a>
