--- a/src/main/webapp/pages/admin/ordermanager/order_edit.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_edit.html
@@ -1,8 +1,10 @@
+<% var sandbar = tempDict.getSysDictDetailByType('sandbar'); %>
 <%
 DIRECTIVE SAFE_OUTPUT_OPEN;
 var headContent = {
 include("/pages/template/head.html"){}
 %>
+
 <script type="text/javascript">
     var oper = {
         save:function(id){
@@ -10,11 +12,21 @@ include("/pages/template/head.html"){}
                 return false;
             }
             id = id || '0';
-            var url = 'system/user/save/'+id;
+            var url = 'admin/ordermanager/save?id='+id;
             form1.action = url;
             form1.submit();
             return true;
         }
+    sandbarChange:function(){
+    	 var grade = document.getElementById("sandbar");
+    	 var value=grade.options[grade.selectedIndex].value;
+    	 var url='credit/country/getCountrySelect?sandbar='+value;
+    	 $.get(url, //这个是请求地址
+    		 function(data) {
+    			  alert(data)
+    		 });
+    	 
+    }
     };
 
 </script>
@@ -25,78 +37,108 @@ var bodyContent = {
 %>
 <form name="form1" action="" method="post" class="form-horizontal"
 	  role="form" >
-	<input type="hidden" name="model.userid" value="${model.userid}" />
-	<% if(isEmpty(model.userid)) { %>
-	<input type="hidden" name="model.theme" value="flat" />
-	<% } %>
 
 	<table class="table">
 		<% // 列表头部 %>
 		<tr>
-			<td>类型</td>
+			<td>大洲</td>
 			<td>
-				<select name="model.usertype" class="form-control" valid="vselect" validname="类型">
-					<option value="-1">--请选择--</option>
-					<option value="1" ${model.usertype==1?"selected":"" }>系统管理员</option>
-					<option value="2" ${model.usertype==2?"selected":"" }>普通用户</option>
-					<option value="5" ${model.usertype==5?"selected":"" }>API用户</option>
-                    <option value="3" ${model.usertype==3?"selected":"" }>前台用户</option>
-                    <option value="4" ${model.usertype==4?"selected":"" }>第三方用户</option>
-                    <option value="9" ${model.usertype==9?"selected":"" }>其他用户</option>
+				<div class="form-group">
+				   <select id="sandbar" name="attr.continent" class="form-control" style="width: 200px;"onchange="oper.sandbarChange()">
+							<option value="-1" selected="selected">请选择</option>
+							 <% for(item in sandbar){ %>
+							 <option value="${item.detail_name_en}">${item.detail_name}</option>
+							  <% } %>
+					</select> 
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td>国家</td>
+			<td>
+				<select name="attr.country" class="form-control" valid="vselect" validname="部门">
+					<option value="${model.country}" selected="selected">${model.country}</option>
 				</select>
 			</td>
 		</tr>
 		<tr>
-			<td>部门</td>
+			<td>客户编码</td>
 			<td>
-				<select name="model.departid" class="form-control" valid="vselect" validname="部门">
-					<option value="-1">--请选择--</option>
-					${departSelect}
-				</select>
+				<input class="form-control" type="text" name="attr.custom_id"
+					   value="${model.custom_id}" valid="vtext" validname="客户编码" />
 			</td>
 		</tr>
 		<tr>
-			<td>登录名</td>
+		<tr>
+			<td>报告语言</td>
 			<td>
-				<input class="form-control" type="text" name="model.username"
-					   value="${model.username}" valid="vtext" validname="登录名" />
+				<input class="form-control" type="text" name="attr.report_language"
+					   value="${model.report_language}" valid="vtext" validname="订单类型" />
 			</td>
 		</tr>
 		<tr>
-			<td>真实姓名</td>
+		<tr>
+			<td>订单类型</td>
 			<td>
-				<input class="form-control" type="text" name="model.realname"
+				<input class="form-control" type="text" name="attr.order_type"
+					   value="${model.username}" valid="vtext" validname="订单类型" />
+			</td>
+		</tr>
+		<tr>
+		<tr>
+			<td>订单类型</td>
+			<td>
+				<input class="form-control" type="text" name="attr.order_type"
+					   value="${model.username}" valid="vtext" validname="订单类型" />
+			</td>
+		</tr>
+		<tr>
+		<tr>
+			<td>订单类型</td>
+			<td>
+				<input class="form-control" type="text" name="attr.order_type"
+					   value="${model.username}" valid="vtext" validname="订单类型" />
+			</td>
+		</tr>
+		<tr>
+		<tr>
+			<td>订单类型</td>
+			<td>
+				<input class="form-control" type="text" name="attr.order_type"
+					   value="${model.username}" valid="vtext" validname="订单类型" />
+			</td>
+		</tr>
+		<tr>
+		<tr>
+			<td>订单类型</td>
+			<td>
+				<input class="form-control" type="text" name="attr.order_type"
+					   value="${model.username}" valid="vtext" validname="订单类型" />
+			</td>
+		</tr>
+		<tr>
+			<td>报告类型</td>
+			<td>
+				<input class="form-control" type="text" name="attr.report_type"
 					   value="${model.realname}" valid="vtext" validname="真实姓名"  />
 			</td>
 		</tr>
 		<tr>
 			<td>Email</td>
 			<td>
-				<input class="form-control" type="text" name="model.email" value="${model.email}"  />
+				<input class="form-control" type="text" name="attrl.email" value="${model.email}"  />
 			</td>
 		</tr>
 		<tr>
 			<td>手机号</td>
 			<td>
-				<input class="form-control" type="text" name="model.tel" value="${model.tel}"  />
+				<input class="form-control" type="text" name="attr.telphone" value="${model.telphone}"  />
 			</td>
 		</tr>
 		<tr>
 			<td>地址</td>
 			<td>
-				<input class="form-control" type="text" name="model.address" value="${model.address}"  />
-			</td>
-		</tr>
-		<tr>
-			<td>头像地址</td>
-			<td>
-				<input class="form-control" type="text" name="model.title_url" value="${model.title_url}"  />
-			</td>
-		</tr>
-		<tr>
-			<td>说明</td>
-			<td>
-				<textarea class="form-control" rows="3" cols="30" name="model.remark">${model.remark}</textarea>
+				<input class="form-control" type="text" name="attr.address" value="${model.address}"  />
 			</td>
 		</tr>
 	</table>
@@ -104,7 +146,7 @@ var bodyContent = {
 	<div style="height: 50px;clear: both;">&nbsp;</div>
 	<nav class="navbar navbar-default navbar-fixed-bottom">
 		<div class="container" style="padding: 5px 0px 5px 0px;text-align: center;">
-			<button class="btn btn-primary" onclick="oper.save(${model.userid!'0'});return false;">保 存</button>
+			<button class="btn btn-primary" onclick="oper.save(${model.id!'0'});return false;">保 存</button>
 			<button class="btn btn-default" onclick="closeIframe();return false;">关 闭</button>
 		</div>
 	</nav>
