--- a/src/main/webapp/pages/admin/ordermanager/order_list.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_list.html
@@ -17,7 +17,7 @@ include("/pages/template/head.html"){}
                 this.form.submit();
             },
             view : function(id) {
-                var url = 'admin/ordermanager/view/'+id;
+                var url = 'admin/ordermanager/view/?id='+id;
                 var title = '查看订单';
                 Iframe(url, this.width, this.height, title, false, false, false, EmptyFunc);
             },
@@ -27,22 +27,17 @@ include("/pages/template/head.html"){}
                 Iframe(url, this.width, this.height, title);
             },
             edit : function(id) {
-                var url = 'admin/ordermanager/edit/'+id;
+                var url = 'admin/ordermanager/edit/?id='+id;
                 var title = '修改订单';
                 Iframe(url, this.width, this.height, title);
             },
             del : function(id) {
-                var url = 'admin/ordermanager/delete/'+id;
+                var url = 'admin/ordermanager/delete/?id='+id;
                 var title = '确认要删除该订单？';
                 Confirm(title, function() {
                     form1.action = url;
                     form1.submit();
                 });
-            }
-            ,auth : function(id) {
-                var url = 'system/user/auth/'+id;
-                var title = '授权角色';
-                Iframe(url, 320, 400, title);
             }
         };
         //显示Menu索引
