--- a/src/main/webapp/pages/system/user/user_edit.html
+++ b/src/main/webapp/pages/system/user/user_edit.html
@@ -96,7 +96,7 @@ var bodyContent = {
 		<tr>
 			<td>说明</td>
 			<td>
-				<textarea class="form-control" rows="3" cols="30" name="model.remark">${model.remark}</textarea>
+				<textarea class="form-control" rows="3" cols="30" name="model.remark" value="${model.remark}"></textarea>
 			</td>
 		</tr>
 	</table>
