--- a/src/main/webapp/pages/credit/uploadfile/file_list.html
+++ b/src/main/webapp/pages/credit/uploadfile/file_list.html
@@ -13,12 +13,12 @@
 			height : 500,
 			form : document.form1,
 			list : function() {
-				var url = 'admin/image/list';
+				var url = 'credit/file/list';
 				this.form.action = url;
 				this.form.submit();
 			},
 			view : function(id) {
-				var url = 'admin/image/view/'+id;
+				var url = 'credit/file/view/'+id;
 				var title = '查看图片';
 				Iframe(url, this.width, this.height, title, false, false, false, EmptyFunc);
 			},
@@ -65,20 +65,22 @@ var bodyContent = {
 		<div class="tableSearch">
 			<%  //查询列表 %>
 			<div class="form-group">
-				<select id="album_id" name="attr.album_id" class="form-control" >
-				<option value="-1">--请选择--</option>
-				${selectAlbum }
-				</select>
-			</div>
-			<div class="form-group">
 					<input class="form-control" type="text" name="attr.name" value="${attr.name!''}" 
 						placeholder="请输入名称" required='required' />
 			</div>
 			<div class="form-group">
-					<select name="attr.status" class="form-control" >
-					<option value="-1">--请选择--</option>
-					<option value="1" ${attr.status==1?'selected':''}>显示</option>
-					<option value="2" ${attr.status==2?'selected':''}>隐藏</option>
+					<select name="attr.business_type" class="form-control" >
+					<option value="-1">--选择业务类型--</option>
+					<option value="1" ${attr.status==1?'selected':''}>订单附件</option>
+					<option value="2" ${attr.status==2?'selected':''}>其他</option>
+					</select>
+			</div>
+			<div class="form-group">
+					<select name="attr.ext" class="form-control" >
+					<option value="-1">--选择文件类型--</option>
+					<option value="1" }>doc文档</option>
+					<option value="2" }>excel表格</option>
+					<option value="3" }>pdf文档</option>
 					</select>
 			</div>
 			
@@ -99,16 +101,14 @@ var bodyContent = {
 				<tr>
 					<th>序号</th>
 					<%  // 列表头部 %>
-					<th name="album_name" class="sorting">相册名称</th> 
-					<th name="name" class="sorting">图片名称</th> 
-					<th>图片</th> 
-					<th name="status" class="sorting">状态</th> 
-					<th name="is_comment" class="sorting">是否评论</th> 
-					<th name="is_recommend" class="sorting">是否推荐</th> 
-					<th name="sort" class="sorting">排序</th> 
-					<th name="publish_time" class="sorting">发布时间</th> 
-					<th name="publish_user" class="sorting">发布者</th> 
-					<th name="create_time" class="sorting">创建时间</th> 
+					<th name="originalname" class="sorting">文件名称</th> 
+					<th name="ext" class="sorting">文件类型</th> 
+					<th name="size" class="sorting">文件大小</th> 
+					<th name="business_type" class="sorting">业务类型</th> 
+					<th name="business_id" class="sorting">业务编码</th> 
+					<th name="remarks" class="sorting">说明</th> 
+					<th name="update_by" class="sorting">上传人</th> 
+					<th name="update_date" class="sorting">上传时间</th> 
  					<th>操作</th>
 				</tr>
 			</thead>
@@ -117,43 +117,27 @@ var bodyContent = {
 				<tr>
 				<td>${itemLP.index }</td>
 					<%  // 列表内容 %>
-					<td>${item.album_name}</td> 
-					<td>${item.name}</td> 
+					<td>${item.originalname}</td> 
+					<td>${item.ext}</td> 
 					<td>
-					<% if(!strutil.isEmpty(item.image_url)||!strutil.isEmpty(item.image_net_url)){ %>
-						<a href="${flyfox.getImage(item)}" target="_blank" style="text-decoration:none;">
-							<img alt="图片" title="点击浏览" src="${flyfox.getImage(item)}" width="40" height="40">
-						</a>
-					<% } %>
+						${item.size}字节
 					</td> 
 					<td>
-					<% if(item.status==2) { %>
-					隐藏
+					<% if(item.business_type==0) { %>
+					订单附件
 					<%	} %>
-					<% if(item.status==1) { %>
-					显示
+					<% if(item.business_type==1) { %>
+					其他
 					<%	} %>
 					</td>  
 					<td>
-					<% if(item.is_comment==2) { %>
-					否
-					<%	} %>
-					<% if(item.is_comment==1) { %>
-					是
-					<%	} %>
+					${item.business_id}
 					</td>  
 					<td>
-					<% if(item.is_recommend==2) { %>
-					否
-					<%	} %>
-					<% if(item.is_recommend==1) { %>
-					是
-					<%	} %>
+					${item.remarks}
 					</td> 
-					<td>${item.sort}</td> 
-					<td>${item.publish_time}</td> 
-					<td>${item.publish_user}</td> 
-					<td>${item.create_time}</td> 
+					<td>${item.update_by}</td> 
+					<td>${item.update_date}</td> 
 				<td>
 				<a href="javascript:void(0);" class="btn btn-sm btn-success" onclick="oper.view(${item.id});">查看</a> 
 				<a href="javascript:void(0);" class="btn btn-sm btn-primary" onclick="oper.edit(${item.id});">修改</a> 
