--- a/src/main/webapp/pages/credit/uploadfile/file_view.html
+++ b/src/main/webapp/pages/credit/uploadfile/file_view.html
@@ -10,92 +10,50 @@ var bodyContent = {
 	<table class="table">
 		<%  // 列表头部 %>
 			<tr>
-				<td>相册名称</td>
-				<td>${model.album_name}</td>
-				<td>图片名称</td>
-				<td>${model.name}</td>
+				<td>文件名称</td>
+				<td>${model.originalname}</td>
 			</tr>
 			<tr>
-				<td>图片</td>
+				<td>文件</td>
 				<td colspan="3">
-					<% if(!strutil.isEmpty(model.image_url)||!strutil.isEmpty(model.image_net_url)){ %>
-						<a href="${flyfox.getImage(model)}" target="_blank" style="text-decoration:none;">
-							<img alt="图片" title="点击浏览" src="${flyfox.getImage(model)}" width="40" height="40">
+					<% if(!strutil.isEmpty(model.url)){ %>
+						<a href="${model.url}" target="_blank" style="text-decoration:none;">
+							<img alt="文件" title="点击浏览" src="" width="40" height="40">
 						</a>
 					<% } %>
-					${flyfox.getImage(model)}
 				</td>
 			</tr>
 			<tr>
 				<td>链接地址</td>
-				<td colspan="3">
-				<input type="text" class="form-control" value="${model.linkurl}">
+				<td colspan="5">
+				<input type="text" class="form-control" value="${model.url}">
 				</td>
 			</tr>
 			<tr>
-				<td>CDN地址</td>
-				<td colspan="3">
-				<input type="text" class="form-control" value="${model.cdnurl}">
-			</td> 
-			</tr>
-			<tr>
-				<td>扩展名</td>
+				<td>文件类型</td>
 				<td>${model.ext}</td>
-				<td>宽X高</td>
-				<td>${model.width}X${model.height}</td>
+				<td>文件大小</td>
+				<td>${model.size}字节</td>
 			</tr>
 			<tr>
-				<td>排序</td>
-				<td>${model.sort}</td>
-				<td>状态</td>
-				<td>
-				<% if(model.status==2) { %>
-				隐藏
-				<%	} %>
-				<% if(model.status==1) { %>
-				显示
-				<%	} %>
-				</td>  
-			</tr>
-			<tr>
-				<td>是否评论</td>
-				<td>
-				<% if(model.is_comment==2) { %>
-				否
-				<%	} %>
-				<% if(model.is_comment==1) { %>
-				是
-				<%	} %>
-				</td>  
-				<td>是否推荐：2 否 1 是</td>
-				<td>${model.is_recommend}</td>
-			</tr>
-			
-			<tr>
-				<td>发布时间</td>
-				<td>${model.publish_time}</td>
-				<td>发布者</td>
-				<td>${model.publish_user}</td>
+				<td>创建时间</td>
+				<td>${model.create_date}</td>
+				<td>上传人</td>
+				<td>${model.create_by}</td>
+				<td>修改时间</td>
+				<td>${model.update_date}</td>
+				<td>修改人</td>
+				<td>${model.update_by}</td>
 			</tr>
 			<tr>
 				<td>备注</td>
-				<td title="${model.remark}" colspan="3">
-				<% if (strutil.length(model.remark) > 25) { %>
-					${strutil.subStringTo(model.remark, 0, 25)}...
+				<td title="${model.remarks}" colspan="3">
+				<% if (strutil.length(model.remarks) > 25) { %>
+					${strutil.subStringTo(model.remarks, 0, 25)}...
 				<% 	} else { %>
-					${model.remark}
+					${model.remarks}
 				<%  } %>
 			</td> 
-			<tr>
-				<td>标签</td>
-				<td title="${tags!}" colspan="3">
-				<% if (strutil.length(tags!) > 25) { %>
-					${strutil.subStringTo(tags!, 0, 25)}...
-				<% 	} else { %>
-					${tags!}
-				<%  } %>
-			</td> 
-			</tr>
 	</table>
 	
 	<div style="height: 50px;clear: both;">&nbsp;</div>
