--- a/src/main/webapp/pages/admin/ordermanager/order_edit.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_edit.html
@@ -4,7 +4,9 @@ DIRECTIVE SAFE_OUTPUT_OPEN;
 var headContent = {
 include("/pages/template/head.html"){}
 %>
-
+<script type="text/javascript" src="static/component/echarts/echarts-plain.js"></script>
+<!-- 时间组件 -->
+<% include("/pages/includes/my97.html"){} %>
 <script type="text/javascript">
     var oper = {
         save:function(id){
@@ -103,7 +105,7 @@ var bodyContent = {
 	<table class="table">
 		<% // 列表头部 %>
 		<tr>
-			<td>客户id</td>
+			<td>客户ID</td>
 			<td>
 				<select id="customid" name="attr.continent" valid="vselect" class="form-control" validname="客户id" onchange="oper.customChange()">
 					
@@ -126,15 +128,7 @@ var bodyContent = {
 					   value="${model.create_by}" valid="vtext" validname="客户用户名" readonly="readonly"/>			
 			</td>
 		</tr>
-		<tr>
-			<td>接单日期</td>
-			<td>
-				<input type="text" name="attr.receiver_date" class="form-control" 
-					value="${model.receiver_date}" valid="vtext" validname="接单日期" 
-					 placeholder="接单日期" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})" />
-			</td>
-		</tr>
-		<tr>
+			<tr>
 			<td>地区</td>
 			<td>
 	
@@ -165,6 +159,16 @@ var bodyContent = {
 				</select>
 			</td>
 		</tr>
+		<tr>
+			<td>接单日期</td>
+			<td>
+				<input type="text" name="attr.receiver_date" class="form-control" 
+					value="${model.receiver_date}" valid="vtext" validname="接单日期" 
+					 placeholder="接单日期" onfocus="WdatePicker({dateFmt:'yyyy-MM-dd'})" />
+			</td>
+		</tr>
+	
+		
 		<tr>
 			<td>报告类型</td>
 			<td>
