--- a/src/main/webapp/pages/credit/pricemanager/price_list.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_list.html
@@ -1,4 +1,5 @@
-﻿<% 
+﻿<% var ordertype = tempDict.getSysDictDetailByType('ordertype'); %>
+<% 
 	var headContent = {
 	include("/pages/template/head.html"){}
 %>
@@ -68,6 +69,14 @@ var bodyContent = {
 	<% include("/pages/template/menu.html"){} %>
 	
 	<div class="tableSearch">
+		<div class="form-group">
+		   <label  class="control-label">订单类型</label>
+		   <select name="" class="form-control" style="width: 200px;">
+					   <% for(item in ordertype){ %>
+					 	<option  m-type="${item.detail_name_en}" value="${item.detail_id}">${item.detail_name}</option>
+					  <% } %>
+			</select> 
+		</div>
 		<div class="form-group">
 		   <label  class="control-label">报告类型</label>
 		   <select name="attr.reporttype" class="form-control" style="width: 200px;">
