--- a/src/main/webapp/pages/admin/ordermanager/order_edit.html
+++ b/src/main/webapp/pages/admin/ordermanager/order_edit.html
@@ -34,7 +34,8 @@ include("/pages/template/head.html"){}
     	        dataType:"json",
     	        success: function(data) {
     	           $.each(data,function(index,item){
-    	        	   console.log(item)
+    	        	   console.log(index);
+    	        	   console.log(item);
    					 if(item.id='${model.country}'){
    						 html+=("<option selected='selected' m-type='"+item.type+"' value='"+item.id+"'>"+item.name+"</option>");
    					 }else{
@@ -133,7 +134,6 @@ var bodyContent = {
 			<td>
 	
 				   <select id="sandbar" name="attr.continent" valid="vselect" class="form-control" onchange="oper.sandbarChange()">
-							<option value="" >请选择</option>
 							 <% for(item in sandbar){ %>
 							 	<% if(model.continent==(item.detail_id+"")){ %>
 							 	 <option selected="selected" m-type="${item.detail_name_en}" value="${item.detail_id}">${item.detail_name}</option>
