--- a/src/main/webapp/pages/credit/pricemanager/price_list.html
+++ b/src/main/webapp/pages/credit/pricemanager/price_list.html
@@ -97,12 +97,11 @@ var bodyContent = {
 			<tr>
 			
 				<th name="id" class="sorting">序号</th>
-				<th name="order_type" class="sorting">订单类型</th>
-
-				<th name="order_speed" class="sorting">订单速度</th>
-				<!-- startl -->				
 				<th name="report_type" class="sorting">报告类型</th>
+				<th name="order_speed" class="sorting">报告速度</th>
+				<!-- startl -->				
 				<th name="country_type" class="sorting">国家</th>
+					<th name="order_type" class="sorting">订单类型</th>
 				<!-- endl -->
 				<th name="usabled" class="sorting">是否禁用</th>
 				<th name="del_flag" class="sorting">是否删除</th>
