--- a/src/main/webapp/pages/credit/uploadfile/file_list.html
+++ b/src/main/webapp/pages/credit/uploadfile/file_list.html
@@ -1,4 +1,5 @@
-<% var language = tempDict.getSysDictDetailByType('language'); %>
+<% var upload_busType = tempDict.getSysDictDetailByType('upload_busType'); %>
+<% var uploadFileTtype = tempDict.getSysDictDetailByType('uploadFileTtype'); %>
 <% 
 	var headContent = {
 	include("/pages/template/head.html"){}
@@ -34,7 +35,7 @@
 				Iframe(url, this.width, this.height, title);
 			},
 			del : function(id) {
-				var url = 'admin/image/delete/'+id;
+				var url = 'credit/file/delete/'+id;
 				var title = '确认要删除该图片信息？';
 				Confirm(title, function() {
 					form1.action = url;
@@ -71,21 +72,18 @@ var bodyContent = {
 			</div>
 			<div class="form-group">
 					<select name="attr.business_type" class="form-control" >
-					<option value="">--选择文件类型--</option>
-					 <% for(item in language){ %>
-					 	<option  m-type="${item.detail_name_en}" value="${item.detail_id}">${item.detail_name}</option>
+					<option value="">--请选择--</option>
+					 <% for(item in upload_busType){ %>
+					 	<option  m-type="${item.detail_name_en}" value="${item.detail_code}">${item.detail_name}</option>
 					  <% } %>
-					<!-- <option value="-1">--选择业务类型--</option>
-					<option value="0" ${"attr.business_type"==0?'selected':''}>订单附件</option>
-					<option value="1" ${"attr.business_type"==1?'selected':''}>其他</option> -->
 					</select>
 			</div>
 			<div class="form-group">
-					<select name="attr.ext" class="form-control" >
-					<option value="">--选择文件类型--</option>
-					<option value="1" >doc文档</option>
-					<option value="2" >excel表格</option>
-					<option value="3" >pdf文档</option>
+					<select name="attr.ext_id" class="form-control" >
+					<option value="">--请选择--</option>
+					 <% for(item in uploadFileTtype){ %>
+					 	<option  m-type="${item.detail_name_en}" value="${item.detail_id}">${item.detail_name}</option>
+					  <% } %>
 					</select>
 			</div>
 			
