--- a/src/main/webapp/pages/credit/uploadfile/file_list.html
+++ b/src/main/webapp/pages/credit/uploadfile/file_list.html
@@ -44,7 +44,7 @@
 			}
 		};
 		//显示Menu索引
-		showMenu('page_image');
+		showMenu('page_uploadfile');
 	});
 	
 	//分页
@@ -72,15 +72,13 @@ var bodyContent = {
 			</div>
 			<div class="form-group">
 					<select name="attr.business_type" class="form-control" >
-					<option value="">--请选择--</option>
 					 <% for(item in upload_busType){ %>
-					 	<option  m-type="${item.detail_name_en}" value="${item.detail_code}">${item.detail_name}</option>
+					 	<option  m-type="${item.detail_name_en}" value="${item.detail_id}">${item.detail_name}</option>
 					  <% } %>
 					</select>
 			</div>
 			<div class="form-group">
 					<select name="attr.ext_id" class="form-control" >
-					<option value="">--请选择--</option>
 					 <% for(item in uploadFileTtype){ %>
 					 	<option  m-type="${item.detail_name_en}" value="${item.detail_id}">${item.detail_name}</option>
 					  <% } %>
@@ -126,12 +124,17 @@ var bodyContent = {
 						${item.size}字节
 					</td> 
 					<td>
-					<% if(item.business_type==0) { %>
+				<!-- 	<% if(item.business_type==0) { %>
 					订单附件
 					<%	} %>
 					<% if(item.business_type==1) { %>
 					其他
-					<%	} %>
+					<%	} %> -->
+					<% for(it in upload_busType){ %>
+				 	<% if((item.business_type+"")==(it.detail_id+"")){ %>
+				 		${it.detail_name}
+					<% }%>
+				  	<% } %>
 					</td>  
 					<td>
 					${item.business_id}
