1.解决排序问题 2.单字段模糊搜索改为多字段模糊搜索

--- a/src/main/webapp/pages/credit/reportType/reportType_edit.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_edit.html
@@ -64,7 +64,7 @@ var bodyContent = {
 				<tr>
 					<td>备注</td>
 					<td>
-					<input class="form-control" type="text" name="model.remarks" value="${model.remarks }"  />
+					<textarea class="form-control" type="text" name="model.remarks" >${model.remarks }</textarea>
 					</td>
 				</tr>
 	</table>
