--- a/src/main/webapp/pages/credit/reportType/reportType_list.html
+++ b/src/main/webapp/pages/credit/reportType/reportType_list.html
@@ -50,7 +50,7 @@
 </script>
 
 <% }; var bodyContent = { %>
-<form name="form1" action="" method="post" class="form-horizontal"
+<form name="form1" action="" method="post" class="form-inline"
 	role="form">
 	<input type="hidden" name="form.orderColumn"
 		value="${form.orderColumn!''}" /> <input type="hidden"
@@ -60,6 +60,7 @@
 
 	<div class="tableSearch">
 		<% //查询列表 %>
+		检索内容
 		<div class="form-group">
 			<input class="form-control" type="text" name="keyWord"
 				value="${keyWord!''}" placeholder="请输入关键字" required='required' />
@@ -74,7 +75,6 @@
 		<button type="button" class="btn btn-default" onclick="oper.add();">
 			<span class="glyphicon glyphicon-plus"></span> 新 增
 		</button>
-
 	</div>
 	<!-- 数据列表 -->
 	<table class="table table-striped table-bordered table-hover">
@@ -87,7 +87,7 @@
 				<th name="t.tpl_path" class="sorting">报告路径</th>
 				<th name="u.realname" class="sorting">创建人</th>
 				<th name="t.remarks" class="sorting">备注</th>
-				
+				<th>操作</th>
 			</tr>
 		</thead>
 		<tbody>
